<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/page_num"
            android:padding="16dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="3 of 5" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/page3"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_gravity="center"
            android:text="@string/page3_desc"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="16dp"
        android:paddingBottom="100dp">

        <RadioButton
            android:textSize="18sp"
            android:padding="8dp"
            android:id="@+id/radioButton2"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:checked="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:button="@drawable/units_radio"
            android:text="@string/page3_bt_en"
            tools:targetApi="lollipop" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DBDBDB"/>
        <RadioButton
            android:textSize="18sp"
            android:padding="8dp"
            android:id="@+id/radioButton"
            android:layoutDirection="rtl"
            android:textAlignment="textStart"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:button="@drawable/units_radio"
            android:text="@string/page3_bt_met" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#DBDBDB"/>
    </RadioGroup>
    <LinearLayout
        android:paddingTop="8dp"
        android:id="@+id/start_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:background="@drawable/border">

        <Button
            android:drawableStart="@drawable/ic_back"
            android:drawableEnd="@drawable/filename"
            android:id="@+id/back"
            android:paddingStart="16dp"
            android:textAlignment="textEnd"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:letterSpacing=".1"
            android:textSize="18sp"
            android:textColor="#0043FF"
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            android:text="@string/str_continue"
            tools:targetApi="lollipop" />
    </LinearLayout>
</FrameLayout>