<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background">

        <TextView
            android:id="@+id/sign"
            style="@style/h1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/sign_in"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--  Email Label -->
        <EditText
            android:id="@+id/input_email"
            style="@style/edit_text"
            android:hint="Email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign" />

        <!-- Password Label -->
        <EditText
            android:id="@+id/input_password"
            style="@style/edit_text"
            android:hint="Password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_email" />

        <Button
            android:id="@+id/btn_login"
            style="@style/button"
            android:text="@string/login"
            android:layout_marginTop="20dp"
            app:layout_constraintDimensionRatio="4:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_password" />

        <TextView
            android:id="@+id/link_signup"
            style="@style/small_text"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/no_account_yet_create_one"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>