<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/page_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="5 of 5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/page5"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="16dp"
            android:text="@string/page5_desc"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tall"
        android:layout_below="@+id/linearLayout2">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_bar"
        android:layout_marginBottom="0dp"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <LinearLayout
        android:id="@+id/start_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <Button
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:drawableStart="@drawable/ic_back"
            android:drawableEnd="@drawable/filename"
            android:paddingStart="16dp"
            android:textAlignment="textEnd" />

        <Button
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:letterSpacing=".1"
            android:text="@string/finish"
            android:textAlignment="center"
            android:textColor="#0043FF"
            android:textSize="18sp"
            tools:targetApi="lollipop" />
    </LinearLayout>

</RelativeLayout>