<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/page_num"
            android:padding="16dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="4 of 5" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/page4"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:layout_gravity="center"
            android:text="@string/page4_desc"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/weight"
        android:layout_below="@+id/linearLayout2">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_bar"
        android:layout_marginBottom="0dp"
        android:padding="16dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="32sp" />

    <LinearLayout
        android:paddingTop="8dp"
        android:id="@+id/start_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:background="@drawable/border">
        <Button
            android:drawableStart="@drawable/ic_back"
            android:drawableEnd="@drawable/filename"
            android:id="@+id/back"
            android:paddingStart="16dp"
            android:textAlignment="textEnd"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:letterSpacing=".1"
            android:textSize="18sp"
            android:textColor="#0043FF"
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            android:text="@string/str_continue"
            tools:targetApi="lollipop" />
    </LinearLayout>
</RelativeLayout>