<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="top|center">
        <TextView
            android:id="@+id/page_num"
            android:padding="16dp"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="2 of 5" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/page2"
            android:textSize="24sp" />

        <TextView
            android:padding="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/page2_desc"
            android:textAlignment="center"
            android:textSize="18sp" />
    </LinearLayout>
    <RadioGroup
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:layout_margin="16dp"
            android:id="@+id/male"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:background="@drawable/gender_selector_male" />
        <RadioButton
            android:layout_margin="16dp"
            android:id="@+id/female"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@android:color/transparent"
            android:background="@drawable/status_selector_gym" />
    </RadioGroup>

    <LinearLayout
        android:paddingTop="8dp"
        android:id="@+id/start_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:background="@drawable/border">
        <Button
            android:drawableStart="@drawable/ic_back"
            android:drawableEnd="@drawable/filename"
            android:id="@+id/back"
            android:paddingStart="16dp"
            android:textAlignment="textEnd"
            android:background="@android:color/transparent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:letterSpacing=".1"
            android:textSize="18sp"
            android:textColor="#0043FF"
            android:id="@+id/next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:background="@android:color/transparent"
            android:text="@string/str_continue"
            tools:targetApi="lollipop" />
    </LinearLayout>
</FrameLayout>