<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background">

        <TextView
            android:id="@+id/sign"
            style="@style/h1"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:text="@string/sign_up"
            android:textColor="@android:color/white"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Name Label -->
        <EditText
            android:id="@+id/input_name"
            style="@style/edit_text"
            android:hint="Name"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sign" />

        <!--  Email Label -->
        <EditText
            android:id="@+id/input_email"
            style="@style/edit_text"
            android:hint="Email"
            android:inputType="textEmailAddress"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_name" />

        <!-- Password Label -->
        <EditText
            android:id="@+id/input_password"
            style="@style/edit_text"
            android:hint="Password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_email" />

        <!-- Password Re-enter Label -->
        <EditText
            android:id="@+id/input_reEnterPassword"
            style="@style/edit_text"
            android:hint="Re-enter Password"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_password" />

        <TextView
            android:id="@+id/poli"
            style="@style/small_text"
            android:layout_marginTop="20dp"
            android:paddingStart="20dp"
            android:text="@string/by_signing_up_you_agree_to_our_terms_and_privacypolicy"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_reEnterPassword" />

        <Button
            android:id="@+id/bt_finish_signup"
            style="@style/button"
            android:layout_marginTop="20dp"
            android:text="@string/sign_up"
            app:layout_constraintDimensionRatio="4:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/poli" />
        <TextView
            android:id="@+id/login"
            style="@style/small_text"
            android:text="@string/already_have_an_account_login"
            android:layout_margin="20dp"
            android:textColor="@android:color/white"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bt_finish_signup"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>